tests/idris2/error013/expected
1/1: Building Issue361 (Issue361.idr)
Error: main is not total, possibly not terminating due to function Main.(==) being reachable via Main.Eq implementation at Issue361:5:1--5:11 -> Main.(==)

Issue361:7:1--7:13
 3 | data S = T | F
 4 | 
 5 | Eq S where
 6 | 
 7 | main : IO ()
     ^^^^^^^^^^^^

Error: /= is not total, possibly not terminating due to call to Main.Eq implementation at Issue361:5:1--5:11

Issue361:5:1--5:11
 1 | %default total
 2 | 
 3 | data S = T | F
 4 | 
 5 | Eq S where
     ^^^^^^^^^^

Error: == is not total, possibly not terminating due to recursive path Main.(/=) -> Main.(==)

Issue361:5:1--5:11
 1 | %default total
 2 | 
 3 | data S = T | F
 4 | 
 5 | Eq S where
     ^^^^^^^^^^

